[tool.poetry]
name = "konsensus"
version = "0.1.4"
description = "Simple clustering by consensus library"
authors = ["BrianLusina <12752833+BrianLusina@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["konsensus", "paxos", "consensus"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "^3.3.4"
pytest = "^8.3.4"
black = "^25.1.0"
pre-commit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = ">=4,<7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
